# loan_calculator

./: .gitignore  .travis.yml  Pipfile  README.rst  pyproject.toml  setup.py
docs/: introduction.rst
ipynb/: examples.ipynb  prototyping.ipynb
ipynb/.ipynb_checkpoints/: prototyping-checkpoint.ipynb
loan_calculator/: main.py
notebooks/: examples.ipynb  prototyping.ipynb
payulator/: __init__.py  constants.py  helpers.py  loan.py  main.py
pip-wheel-metadata/: payulator-3.1.0-py3-none-any.whl
pip-wheel-metadata/payulator-3.1.0.dist-info/: METADATA  RECORD
tests/: context.py  test_helpers.py  test_loan.py  test_main.py
