[tool.poetry]
name = "payulator"
version = "3.0.0"
description = "A Python 3.6+ loan calculator"
authors = ["Alex Raichev <alex@raichev.net>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.1"
voluptuous = "^0.11.5"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "^4.3"
black = "=18.9b0"
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
