[tool.poetry]
name = "payulator"
version = "3.4.0"
description = "A Python 3.8+ loan calculator"
authors = ["Alex Raichev <alex@raichev.net>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">1"
voluptuous = "^0.12"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "*"
black = "=19.3b0"
pre-commit = "*"
publish_sphinx_docs = "^1.0"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
